Updated Tomcat plugin url to point from local to AWS server

--- a/pom.xml
+++ b/pom.xml
@@ -123,8 +123,8 @@
 			<artifactId>tomcat7-maven-plugin</artifactId>
 			<version>2.2</version>
 			<configuration>
-				<url>http://localhost:8080/manager/text</url>
-				<!-- <url>http://ec2-54-85-124-198.compute-1.amazonaws.com:9090/manager/text</url> -->
+				<!-- <url>http://localhost:8080/manager/text</url> -->
+				<url>http://ec2-54-85-124-198.compute-1.amazonaws.com:9090/manager/text</url>
 				<server>TomcatServer</server>
 				<path>/AdoptNextWS</path>
 			</configuration>
